# minijava_compiler

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  ArithmeticExpressionNode.cpp  ArithmeticExpressionNode.hpp  ArithmeticTac.cpp  ArithmeticTac.hpp  ArrayAccessNode.cpp  ArrayAccessNode.hpp  ArrayLengthNode.cpp  ArrayLengthNode.hpp  BBlock.cpp  BBlock.hpp  BooleanExpressionNode.cpp  BooleanExpressionNode.hpp  BooleanNode.cpp  BooleanNode.hpp  BooleanTac.cpp  BooleanTac.hpp  Bytecode.cpp  Bytecode.hpp  BytecodeInstruction.cpp  BytecodeInstruction.hpp  BytecodeMainMethod.cpp  BytecodeMainMethod.hpp  BytecodeMethod.cpp  BytecodeMethod.hpp  BytecodeMethodBlock.cpp  BytecodeMethodBlock.hpp  BytecodeProgram.cpp  BytecodeProgram.hpp  CFG.cpp  CFG.hpp  CMakeLists.txt  Class.cpp  Class.hpp  ClassAllocationNode.cpp  ClassAllocationNode.hpp  (+68 more)
.github/workflows/: ci.yml  main.yml
docs/: grammar.g  lexer_legacy_behavior.md  symbol_table_visitor_spec.md
src/: main.cpp
src/ast/: ArithmeticExpressionNode.cpp  ArithmeticExpressionNode.hpp  ArrayAccessNode.cpp  ArrayAccessNode.hpp  ArrayLengthNode.cpp  ArrayLengthNode.hpp  AstVisitor.cpp  AstVisitor.hpp  BooleanExpressionNode.cpp  BooleanExpressionNode.hpp  BooleanNode.cpp  BooleanNode.hpp  ClassAllocationNode.cpp  ClassAllocationNode.hpp  ClassNode.cpp  ClassNode.hpp  ControlStatementNode.cpp  ControlStatementNode.hpp  IdentifierNode.cpp  IdentifierNode.hpp  IntegerArrayAllocationNode.cpp  IntegerArrayAllocationNode.hpp  IntegerNode.cpp  IntegerNode.hpp  LogicalExpressionNode.cpp  LogicalExpressionNode.hpp  MainClassNode.cpp  MainClassNode.hpp  MethodBodyNode.cpp  MethodBodyNode.hpp  MethodCallNode.cpp  MethodCallNode.hpp  MethodCallWithoutArgumentsNode.cpp  MethodCallWithoutArgumentsNode.hpp  MethodNode.cpp  MethodNode.hpp  MethodParameterNode.cpp  MethodParameterNode.hpp  MethodWithoutParametersNode.cpp  MethodWithoutParametersNode.hpp  (+10 more)
src/bytecode/: BytecodeInstruction.cpp  BytecodeInstruction.hpp  BytecodeMainMethod.cpp  BytecodeMainMethod.hpp  BytecodeMethod.cpp  BytecodeMethod.hpp  BytecodeMethodBlock.cpp  BytecodeMethodBlock.hpp  BytecodeProgram.cpp  BytecodeProgram.hpp  Opcode.hpp
src/ir/: ArithmeticTac.cpp  ArithmeticTac.hpp  BBlock.cpp  BBlock.hpp  BooleanTac.cpp  BooleanTac.hpp  CFG.cpp  CFG.hpp  IRGenerationVisitor.cpp  IRGenerationVisitor.hpp  LogicalTac.cpp  LogicalTac.hpp  Tac.cpp  Tac.hpp
src/ir/passes/: ConditionalJumpFoldingPass.cpp  ConditionalJumpFoldingPass.hpp  ConstantFoldingPass.cpp  ConstantFoldingPass.hpp  IRPass.hpp  IRPassManager.cpp  IRPassManager.hpp  (+2 more)
src/lexing/: CharStream.hpp  Diagnostics.hpp  LegacyDiagnostics.cpp  LegacyDiagnostics.hpp  Lexer.cpp  Lexer.hpp  SourceBuffer.hpp  StringViewStream.cpp  StringViewStream.hpp  Token.hpp  lexer.flex
src/parsing/: Parser.cpp  Parser.hpp  parser.yy
src/semantic/: Class.cpp  Class.hpp  Method.cpp  Method.hpp  Record.cpp  Scope.cpp  Scope.hpp  SymbolTable.cpp  SymbolTable.hpp  SymbolTableVisitor.cpp  SymbolTableVisitor.hpp  TypeCheckVisitor.cpp  TypeCheckVisitor.hpp  TypeNode.cpp  TypeNode.hpp  Variable.cpp  Variable.hpp
src/util/: Expected.hpp  serialize.cpp  serialize.hpp
src/vm/: vm.cpp
test_files/assignment3_valid/: A.java  B.java  C1.java  C2.java  D1.java  D2.java  D3.java  E.java
test_files/lexical_errors/: UnknownSymbol.java
test_files/misc/: DoubleMain.java  assign.java  boolean.java  foo.java  if.java  if_else_in_while.java  if_in_while.java  ir1.java  ir2.java  ir3.java  ir4.java  ir5.java  ir6.java  ir7.java  ir8.java  ir9.java  method.java  method_call.java  method_call_in_assignment.java  new_int_array.java  op.java  while.java  while_in_if.java  while_in_if_else.java
test_files/other/: simple1.java  simple2.java
test_files/semantic_errors/: DuplicateIdentifiers.java  InvalidArrayInteger.java  InvalidDefinitions.java  InvalidNestedMethodCalls.java  InvalidOperations.java  InvalidReturn.java  LittleTest.java
test_files/syntax_errors/: ClassMissingClosingBracket.java  ExtraSemicolon.java  IllegalClassName.java  IllegalIfInIfCondition.java  InvalidClassSignature.java  InvalidMethodCall.java  InvalidMethodCall2.java  InvalidMethodCall3.java  InvalidMethodDeclaration.java  InvalidPrintStatement.java  InvalidTypeDeclaration.java  MethodMissingClosingBracket.java  MissingMethodBraces.java  MissingReturnStatement.java  MissingStatementInMain.java  NoMainMethod.java  StatementAfterReturn.java  UnbalancedClassBraces.java  UnmatchedParentheses.java
test_files/tree_validation/: DanglingElse.java  OperatorPriority.java
test_files/valid/: Arithmetic.java  SemanticArrayInteger.java  SemanticDuplicateIdentifiersSeparateScope.java  SemanticMethodCallInBooleanExpression.java  SemanticValidMethodCall.java
tests/: ir_constant_folding_test.cpp  ir_unreachable_block_elimination_test.cpp  lexer_arithmetic_test.cpp  lexer_exact_test.cpp  lexer_valid_tests.cpp  parser_exact_test.cpp  parser_syntax_error_files_test.cpp  symbol_table_test.cpp
